# mcp-memory

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DOCUMENTATION.md
scripts/: ab_metrics.py  auto_tuner.py  download_model.py  grid_search.py  mcp_stdio_stress.py  migrate_entity_types.py  migrate_to_e5.py  multiprocess_stress.py  reembed_all.py  reembed_migrated.py
src/mcp_memory/: __init__.py  _helpers.py  backpressure.py  config.py  embeddings.py  entity_splitter.py  migrate.py  models.py  retry.py  scoring.py  server.py  storage.py
src/mcp_memory/storage/: __init__.py  _constants.py  access.py  consolidation.py  core.py  reflections.py  relations.py  schema.py  search.py
src/mcp_memory/tools/: core.py  entity_mgmt.py  reflections.py  relations.py  search.py
tests/: conftest.py  test_auto_tuner.py  test_backpressure.py  test_concurrency_bug.py  test_concurrency_stress.py  test_config.py  test_consolidation_report.py  test_consolidation_scoring.py  test_containment.py  test_decorators.py  test_embedding_reupdate.py  test_embeddings.py  test_entity_splitter.py  test_entity_status.py  test_helpers.py  test_kind_supersedes.py  test_mcp_stdio_stress_harness.py  test_models.py  test_multiprocess_stress_harness.py  test_open_nodes.py  test_reflections.py  test_relations_v3.py  test_retry.py  test_scoring.py  test_search_logging.py  test_semantic_dedup.py  test_storage.py  test_tools_entity_mgmt.py  test_v3_integration.py
