[project]
name = "mcp-memory"
version = "0.1.0"
description = "MCP Memory server with SQLite + semantic search"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0",
    "pydantic>=2.0",
    "numpy>=1.26",
    "sqlite-vec>=0.1.6",
    "tokenizers>=0.19",
    "onnxruntime>=1.17",
    "huggingface-hub>=0.20",
    "scipy>=1.11",
]

[project.scripts]
mcp-memory = "mcp_memory.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
